Fixed movie year bug in guesses, fixed toast z-index error bug, and added share path button

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -48,7 +48,7 @@
 .Toastify__toast-container {
   position: fixed;
   top: 70px;
-  z-index: 999999999999999999999;
+  z-index: 99999999999 !important;
 }
 
 .Toastify__toast-theme--dark {
