--- a/client/src/components/Header/ArchiveModal/ArchivedModal.scss
+++ b/client/src/components/Header/ArchiveModal/ArchivedModal.scss
@@ -16,7 +16,8 @@
 
 .archived_modal {
   @media only screen and (max-width: 400px) {
-    max-height: 550px;
+    max-height: 650px;
+    top: 0;
   }
 }
 
